Revert "MODROLESKC-332: Cleanup capabilities in roles upon application revocation (#217)" (#219)
This reverts commit d78c93052d2bedb4ddbb4da6dba9368df6cf5174.