@@ -2,6 +2,7 @@ package org.folio.uk.service;
 
 import static java.lang.String.format;
 import static java.util.UUID.fromString;
+import static java.util.stream.Collectors.toList;
 import static org.apache.commons.collections4.CollectionUtils.isEmpty;
 import static org.apache.commons.collections4.ListUtils.emptyIfNull;
 import static org.folio.common.utils.CollectionUtils.toStream;
@@ -182,7 +183,7 @@ public class UserService {
    * @return list of resolved permissions
    */
   public List<String> resolvePermissions(UUID userId, List<String> userPermissions) {
-    var permissions = userPermissionsClient.getPermissionsForUser(userId, false, userPermissions, null);
+    var permissions = userPermissionsClient.getPermissionsForUser(userId, false, userPermissions);
     return permissions.getPermissions();
   }
 
@@ -227,17 +228,16 @@ public class UserService {
       .map(spId -> servicePointsClient.getServicePoint(fromString(spId)))
       .filter(Optional::isPresent)
       .map(Optional::get)
-      .toList();
+      .collect(toList());
 
-    var servicePointUser = servicePointUsers.getServicePointsUsers().getFirst();
+    var servicePointUser = servicePointUsers.getServicePointsUsers().get(0);
     servicePointUser.setServicePoints(servicePoints);
     return servicePointUser;
   }
 
   private PermissionUser fetchPermissionUser(UUID userId, boolean expandPermissions) {
     var includeOnlyVisiblePermissions = rolesKeycloakConfiguration.isIncludeOnlyVisiblePermissions();
-    var userPermissions = userPermissionsClient.getPermissionsForUser(
-      userId, includeOnlyVisiblePermissions, null, true);
+    var userPermissions = userPermissionsClient.getPermissionsForUser(userId, includeOnlyVisiblePermissions, null);
     var permissionsList = emptyIfNull(userPermissions.getPermissions());
 
     return new PermissionUser()
@@ -322,6 +322,6 @@ public class UserService {
       throw new EntityNotFoundException(format("Failed to find user: service = mod-users, username = %s", username));
     }
 
-    return userByUsername.getFirst();
+    return userByUsername.get(0);
   }
 }
